--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -7,7 +8,77 @@
     <link rel="stylesheet" href="css/style.css">
     <script src="js/app.js" defer></script>
 </head>
+
 <body>
-    
+    <div class="container">
+        <div class="flip-card">
+            <div class="flip-card-inner hideCard display" id="1">
+                <div class="showCard">
+                    <img src="pic/cat1.png" alt="">
+                </div>
+            </div>
+        </div>
+
+        <div class="flip-card">
+            <div class="flip-card-inner hideCard display" id="2">
+                <div class="showCard">
+                    <img src="pic/cat2.png" alt="">
+                </div>
+            </div>
+        </div>
+
+        <div class="flip-card">
+            <div class="flip-card-inner hideCard display" id="3">
+                <div class="showCard">
+                    <img src="pic/cat3.png" alt="">
+                </div>
+            </div>
+        </div>
+
+        <div class="flip-card">
+            <div class="flip-card-inner hideCard display" id="4">
+                <div class="showCard">
+                    <img src="pic/cat4.png" alt="">
+                </div>
+            </div>
+        </div>
+
+
+
+
+        <div class="flip-card">
+            <div class="flip-card-inner hideCard display" id="5">
+                <div class="showCard">
+                    <img src="pic/cat1.png" alt="">
+                </div>
+            </div>
+        </div>
+
+        <div class="flip-card">
+            <div class="flip-card-inner hideCard display" id="6">
+                <div class="showCard">
+                    <img src="pic/cat2.png" alt="">
+                </div>
+            </div>
+        </div>
+
+        <div class="flip-card">
+            <div class="flip-card-inner hideCard display" id="7">
+                <div class="showCard">
+                    <img src="pic/cat3.png" alt="">
+                </div>
+            </div>
+        </div>
+
+        <div class="flip-card">
+            <div class="flip-card-inner hideCard display" id="8">
+                <div class="showCard">
+                    <img src="pic/cat4.png" alt="">
+                </div>
+            </div>
+        </div>
+    </div>
+    <button>START</button>
 </body>
+
 </html>
