--- a/index.html
+++ b/index.html
@@ -10,73 +10,8 @@
 </head>
 
 <body>
+    <h1>Memory Game :p</h1>
     <div class="container">
-        <div class="flip-card">
-            <div class="flip-card-inner hideCard display" id="0">
-                <div class="showCard">
-                    <img src="pic/cat1.png" alt="">
-                </div>
-            </div>
-        </div>
-
-        <div class="flip-card">
-            <div class="flip-card-inner hideCard display" id="1">
-                <div class="showCard">
-                    <img src="pic/cat2.png" alt="">
-                </div>
-            </div>
-        </div>
-
-        <div class="flip-card">
-            <div class="flip-card-inner hideCard display" id="2">
-                <div class="showCard">
-                    <img src="pic/cat3.png" alt="">
-                </div>
-            </div>
-        </div>
-
-        <div class="flip-card">
-            <div class="flip-card-inner hideCard display" id="3">
-                <div class="showCard">
-                    <img src="pic/cat4.png" alt="">
-                </div>
-            </div>
-        </div>
-
-
-
-
-        <div class="flip-card">
-            <div class="flip-card-inner hideCard display" id="4">
-                <div class="showCard">
-                    <img src="pic/cat1.png" alt="">
-                </div>
-            </div>
-        </div>
-
-        <div class="flip-card">
-            <div class="flip-card-inner hideCard display" id="5">
-                <div class="showCard">
-                    <img src="pic/cat2.png" alt="">
-                </div>
-            </div>
-        </div>
-
-        <div class="flip-card">
-            <div class="flip-card-inner hideCard display" id="6">
-                <div class="showCard">
-                    <img src="pic/cat3.png" alt="">
-                </div>
-            </div>
-        </div>
-
-        <div class="flip-card">
-            <div class="flip-card-inner hideCard display" id="7">
-                <div class="showCard">
-                    <img src="pic/cat4.png" alt="">
-                </div>
-            </div>
-        </div>
     </div>
     <button>START</button>
 </body>
