added shuffleArray, display win/loss msg as popup

--- a/index.html
+++ b/index.html
@@ -10,10 +10,24 @@
 </head>
 
 <body>
-    <h1>Memory Game :p</h1>
-    <div class="container">
+    <div class="all">
+        <h1>Match The Cats ^_^</h1>
+        <div class="container">
+        </div>
+        <!-- This div is hidden -->
+        <div class="msg">
+            <a class="close" href="#">&times;</a>
+            <h1 class="printMsg"></h1>
+            <img src="https://i.giphy.com/media/v1.Y2lkPTc5MGI3NjExdWM0M3AwbDlicG9qaG55ajFyY2p2cHBzeWdvcTh0ZXJ5b25lczhnNiZlcD12MV9pbnRlcm5hbF9naWZfYnlfaWQmY3Q9Zw/S5h4gvxxc1qlG/giphy.gif"
+                alt="dancing cat" class="feedback" id="win">
+            </img>
+
+            <img src="https://i.giphy.com/media/v1.Y2lkPTc5MGI3NjExbjRjeGpvN2h4ZnBwM2FmcDlsMHJtbXJzemd1YzEzdWdxb2VxOWszZSZlcD12MV9pbnRlcm5hbF9naWZfYnlfaWQmY3Q9Zw/8fGzZrmwgji7V1TGHm/giphy.gif"
+                alt="angry cat" class="feedback" id="loss">
+            </img>
+        </div>
+        <button>START</button>
     </div>
-    <button>START</button>
 </body>
 
 </html>
